<resources>
    <string name="app_name">SomeChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="menu_chats">Chats</string>
    <string name="menu_status">Status</string>
    <string name="menu_calls">Calls</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="fab_ai_content_description">Open AI Assistant</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="prompt_register">Don\'t have an account? Sign up</string>
    <string name="title_activity_register">Create Account</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_login">Already have an account? Log in</string>
    <string name="action_google_sign_in">Sign in with Google</string>
    <string name="msg_status">Message status</string>
    <string name="play_voice_msg">Play Voice Message</string>
    <string name="zero_time">0:00</string>
    <string name="e2ee_notice">🔒 Messages and calls are end-to-end encrypted. No one outside of this chat, not even SomeChat, can read or listen to them.</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="attach_file">Attach File</string>
    <string name="unfriend">Unfriend</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="add_friend">Add Friend</string>
    <string name="reply">Reply</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="pinned_message">Pinned Message</string>
    <string name="pinned_message_count">Pinned Message (%1$d/%2$d)</string>
    <string name="update_available">New version available!</string>
    <string name="whats_new">What\'s New:</string>
    <string name="update_now">Update Now</string>
    <string name="later">Later</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_handle">Edit Username</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="change_cover_photo">Change cover photo</string>
    <string name="media_links_docs">Media</string>
    <string name="no_media_shared">No media shared yet</string>
    <string name="edited">edited</string>
    <string name="edit_message">Edit Message</string>
    <string name="cancel_edit">Cancel Edit</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="change_bio">Change Bio</string>
    <string name="tap_to_add_bio">Tap to add a bio...</string>
    <string name="no_bio_yet">No bio yet</string>
    <string name="unknown_user">Unknown User</string>
    <string name="add_to_highlight">Add to Highlight</string>
    <string name="remove_from_highlight">Remove from Highlight</string>
    <string name="new_highlight">+ New Highlight</string>
    <string name="status_reported">Status reported</string>
    <string name="highlight_deleted">Highlight deleted</string>
    <string name="removed_from_highlight">Removed from highlight</string>
    <string name="failed_to_remove">Failed to remove</string>
    <string name="status_deleted">Status deleted</string>
    <string name="add_a_caption">Add a caption...</string>
    <string name="post_status">Post Status</string>
    <string name="uploading_status">Uploading status</string>
    <string name="qr_code">QR Code</string>
    <string name="my_profile_qr">My Profile QR</string>
    <string name="scan_profile_qr">Anyone can scan this to view your profile</string>
    <string name="scan_qr">Scan QR</string>
    <string name="invalid_qr">Invalid Profile QR</string>
    <string name="my_code">MY CODE</string>
    <string name="scan_code">SCAN CODE</string>
    <string name="somechat_contact">SomeChat contact</string>
    <string name="qr_private_notice">Your QR code is private. If you share it with someone, they can scan it with their SomeChat camera to add you as a contact.</string>
    <string name="align_qr_notice">Align QR code within the frame to scan</string>
    <string name="scan_barcode_hint">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="share">Share</string>
    <string name="more">More</string>
    <string name="invited_by">Invited by %1$s</string>
    <string name="group_invitations">Group Invitations</string>
    <string name="biometric_lock">Biometric Lock</string>
    <string name="biometric_lock_desc">Require fingerprint or face to open app</string>
    <string name="settings">Settings</string>
    <string name="chat_background">Chat Background</string>
    <string name="change_chat_wallpaper">Change chat wallpaper</string>
    <string name="use_profile_photo">Use Profile Photo</string>
    <string name="create_theme">Create Theme</string>
    <string name="customize_chat_bubbles">Customize chat bubbles and colors</string>
    <string name="sent_bubble_color">Sent Bubble Color</string>
    <string name="received_bubble_color">Received Bubble Color</string>
    <string name="save_apply_theme">Save &amp; Apply Theme</string>
    <string name="theme_preview_received">This is a received message</string>
    <string name="theme_preview_sent">And this is a sent one!</string>
    <string name="emoji_pattern">Emoji Pattern</string>
    <string name="create_emoji_bg">Create emoji pattern background</string>
    <string name="random_positioning">Random positioning</string>
    <string name="add_to_current">Add to current background</string>
    <string name="enter_emojis">Enter Emojis</string>
    <string name="restore_default_theme">Restore Default Theme</string>
    <string name="restore_theme_desc">Reset background and bubble colors to original</string>
    <string name="ai_chat">SomeChat AI</string>
    <string name="ai_hint">Ask me anything...</string>
    <string name="ai_online">Online • %1$s</string>
    <string name="ai_greeting">Hello! I\'m SomeChat AI. How can I help you today?</string>
    <string name="ai_suggest_joke">Tell me a joke</string>
    <string name="ai_suggest_poem">Write a short poem</string>
    <string name="ai_suggest_code">Help me with Java code</string>
    <string name="ai_suggest_email">Write a formal email</string>
    <string name="ai_suggest_translate">Translate to Spanish</string>
    <string name="ai_suggest_story">Tell me a short story</string>
    <string name="ai_suggest_more">Tell me more</string>
    <string name="ai_suggest_explain">Explain further</string>
    <string name="ai_suggest_example">Give an example</string>
    <string name="ai_suggest_summarize">Summarize this</string>
    <string name="ai_suggest_code_explain">Explain this code</string>
    <string name="new_chat">New Chat</string>
    <string name="clear_chat_confirmation">Are you sure you want to start a new chat session? This will clear the current history.</string>
    <string name="code_copied">Code copied to clipboard</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="friends">Friends</string>
    <string name="no_friends_yet">No friends yet</string>
    <string name="requests">Requests</string>
    <string name="pending">Pending</string>
    <string name="no_requests">No friend requests</string>
    <string name="no_pending">No pending requests</string>
    <string name="cancel">Cancel</string>
    <string name="delete_group">Delete Group</string>
    <string name="leave_group">Leave Group</string>
    <string name="encryption_status">Encryption Status</string>
    <string name="e2ee">End-to-End Encryption</string>
    <string name="secured">Secured</string>
    <string name="not_secured">Not Secured</string>
    <string name="setup_encryption">Setup Encryption</string>
    <string name="encryption_desc">Your messages are private and secure.</string>
</resources>