<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_chats">

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.hamraj37.somechat.ui.transform.TransformFragment"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_transform" />

    <fragment
        android:id="@+id/nav_status"
        android:name="com.hamraj37.somechat.ui.reflow.ReflowFragment"
        android:label="@string/menu_status"
        tools:layout="@layout/fragment_reflow" />

    <fragment
        android:id="@+id/nav_calls"
        android:name="com.hamraj37.somechat.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_calls"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.hamraj37.somechat.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>